--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link rel="preconnect" href="https://image.tmdb.org/" crossorigin>
+    <link rel="preconnect" href="https://api.themoviedb.org/" crossorigin>
+    <link rel="canonical" href="https://www.themoviedb.org/">
     <title>React Movie</title>
   </head>
   <body>
